--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,8 @@
-attrs==24.3.0
-certifi==2024.12.14
-cffi==1.17.1
-h11==0.14.0
-idna==3.10
-outcome==1.3.0.post0
-pycparser==2.22
-PySocks==1.7.1
-selenium==4.27.1
-sniffio==1.3.1
-sortedcontainers==2.4.0
-trio==0.28.0
-trio-websocket==0.11.1
-typing_extensions==4.12.2
-urllib3==2.3.0
-websocket-client==1.8.0
-wsproto==1.2.0
+beautifulsoup4==4.14.2
+certifi==2025.11.12
+charset-normalizer==3.4.4
+idna==3.11
+requests==2.32.5
+soupsieve==2.8
+typing_extensions==4.15.0
+urllib3==2.5.0
